tests/reject/newtype_key_mix.hi
# A newtype-keyed map rejects a raw base-typed key: "ana" is not a UserId.
# NOTE: hierc rejects this; hierc0 does NOT (it stores zero-cost newtypes as
# their underlying type, so newtype identity is erased at declaration -- a
# documented less-strict limitation, with hierc as the validating oracle).
# Skip-listed in tests/run.sh's hierc0 reject check.
type UserId = string

fn main():
    m : [UserId: int] = []
    m = map_set(m, "ana", 1)
    print(str(len(m)) + "\n")
